--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,20 +18,20 @@
         <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@android:drawable/ic_media_rew"
+            android:src="@drawable/ic_av_fast_rewind"
             android:onClick="rew"/>
 
         <ImageButton
             android:id="@+id/play"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@android:drawable/ic_media_play"
+            android:src="@drawable/ic_av_play_arrow"
             android:onClick="play"/>
 
         <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@android:drawable/ic_media_ff"
+            android:src="@drawable/ic_av_fast_forward"
             android:onClick="ff"/>
     </LinearLayout>
 
